# HazARG

./: README.md  environment.yml  hazard_score_calculator.py  pyproject.toml  quantify_ARG_hazard.sh
src/: cli.py  config.py  fasta.py  gene_id.py  mmseqs.py  parsing.py  pipeline.py  scoring.py
